--- a/PorStyle.css
+++ b/PorStyle.css
@@ -14,14 +14,13 @@ ul{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 45%;
-    
+    margin-left: clamp(100px,5vw,340px);
 
 }
 ul div{
     margin: 0 1%;
     color: #ffff;
-    font-size:clamp(10px,5vw ,20px);
+    font-size:clamp(7px,5vw ,20px);
     padding: 1.3%;
     
     
@@ -63,11 +62,12 @@ ul div{
     font-size: clamp(10px,5vw,20px);
     background: black;
     color: #ffff;
+    
 }
 .nav ul li.btn{
     display: none;
   }
-/*@media(max-width:1200px)
+@media(max-width:1200px)
 {
     ul{
         margin-left: 10%;
@@ -95,7 +95,7 @@ ul div{
     .nav ul .items:hover:after{
       opacity: 0;
     }
-  }*/
+  }
 /************************************************/
 /********************** PROFIL **************************/
 .profil{
@@ -213,7 +213,7 @@ ul div{
 /******************* REALISATION *****************************/
 .Realisation{
     background: rgb(247, 247, 250);
-    padding-bottom: 5%;
+    padding-bottom: 46%;
 }
 .reas{
     margin-top:10%;
@@ -242,9 +242,10 @@ ul div{
     height: auto;
 }
 .im1 img , .im2 img{
-    width: clamp(400px,5vw,450px);
-    height: clamp(200px,5vw,250px);
+    width: clamp(200px,5vw,450px);
+    height: clamp(100px,5vw,250px);
     margin: 0 4% ;
+    object-fit: cover;
     
 }
 
@@ -264,10 +265,9 @@ ul div{
     width: 80%;
     height: auto;
     margin-left: 10%;
-    margin-top: 3%;
+    margin-top: 10%;
    
 }
-
 .connt h1{
     font-size: clamp(25px,5vw ,50px);
 }
@@ -305,13 +305,6 @@ ul div{
     margin-top: 2.66%;
     margin-bottom: 6.66%;
 }
-.media2{
-    margin-left: 5.33%;
-
-}
-.meme2{
-    margin-left: 9.33%;
-}
 .media i{
     font-size: clamp(25px,5vw,70px);
     color: antiquewhite;
@@ -332,8 +325,9 @@ footer{
     width: 100%;
     height: 13.3%;
     background: rgb(27, 27, 32);
-    
-
+}
+.ltxt{
+    margin: 10%;
 }
 /**********************************/
 .hol{
